# AspectCoder

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
aspectcoder/: config.py
aspectcoder/agents/: aggregator.py  generator.py  inputs.py  plan_verifier.py  planner.py
aspectcoder/agents/reviewers/: base.py  functional.py  performance.py  security.py
aspectcoder/agents/reviewers/knowledge/: cwe_top25.md  owasp_scp.md
aspectcoder/cli/: __init__.py
aspectcoder/cli/commands/: rollback.py  run.py  status.py
aspectcoder/llm/: base_agent.py  client.py
aspectcoder/models/: aggregator.py  code.py  job.py  verdict.py
aspectcoder/pipeline/: orchestrator.py
aspectcoder/storage/: report.py  snapshot.py  task_manager.py
demo/: c-linked-list.md  js-event-emitter.md  python-lru-cache.md  python-mirror-pairs.md
docs/: todo-webui.md
docs/design/: agents.md  data-models.md  interfaces.md  llm-config.md  overview.md  pipeline-flow.md  storage.md
docs/superpowers/plans/: 2026-04-16-foundation.md
mycoder/: config.py
mycoder/llm/: base_agent.py  client.py
mycoder/models/: aggregator.py  code.py  job.py  plan.py
tests/: conftest.py  test_agents_aggregator.py  test_agents_generator.py  test_agents_plan_verifier.py  test_agents_planner.py  test_agents_reviewers.py  test_base_agent.py  test_cli_rollback.py  test_cli_run.py  test_cli_status.py  test_config.py  test_llm_client.py  test_mirror_pairs.py  test_models_aggregator.py  test_models_code.py  test_models_job.py  test_models_plan.py  test_models_verdict.py  test_pipeline_orchestrator.py  test_storage_report.py  test_storage_snapshot.py  test_storage_task_manager.py
