[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycoder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
mycoder = "mycoder.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]
